Fri Mar 25 10:59:10 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/xerces.mpb:

          Changed libs to lit_libs to avoid putting the library decorator on
          the xerces-c library under windows.

Thu Mar 24 08:38:59 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeProjectCreator.pm:
        * modules/MakeProjectCreator.pm:
        * modules/ProjectCreator.pm:
        * modules/StringProcessor.pm:
        * modules/TemplateParser.pm:
        * templates/automake.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:

          Added better support for building projects with files that have
          spaces in the names.

Thu Mar 17 08:03:31 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/openssl.mpb:

          Added support for Shining Light Productions prepackaged OpenSSL.

        * modules/AutomakeProjectCreator.pm:
        * modules/ProjectCreator.pm:

          Made it so the automake project type does not perform relative
          replacement.  So, -noreldefs is not necessary for that type
          anymore.

        * modules/Creator.pm:
        * modules/Parser.pm:
        * modules/TemplateParser.pm:

          Speed improvements which improve generation times by ~15%.
          Also, in the template parser, I fixed a bug that allowed an if
          statement to have multiple else's and removed two deprecated
          sections of code.

Wed Mar 16 22:04:35 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * modules/AutomakeWorkspaceCreator.pm:

          Only emit empty primary definition if the first instance seen in
          the project Makefile.am's is not unconditional.

Wed Mar 16 14:44:51 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * modules/AutomakeWorkspaceCreator.pm:

          Fix stray assignment that was marking all primaries as
          "seen".

Wed Mar 16 13:59:13 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * modules/AutomakeWorkspaceCreator.pm:
