@@ -1,3 +1,10 @@
+Fri Mar 25 18:37:52 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* modules/AutomakeWorkspaceCreator.pm:
+
+	  *_HEADERS processing was broken when I added regular expression
+	  to match all automake primaries.
+
 Fri Mar 25 10:59:10 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * config/xerces.mpb:
